--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <textarea id="mnemonics" autocomplete="off" class="form-control"
-                                    placeholder="One mnemonic per line" rows="10" required /></textarea>
+                                    placeholder="One mnemonic per line" rows="10" required></textarea>
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <textarea name="log" id="log" autocomplete="off" class="form-control" rows="15"
-                            style="width:100%;background:black;color:yellow" /></textarea>
+                            style="width:100%;background:black;color:yellow"></textarea>
                     </div>
                 </div>
             </div>
