--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cosmos Votes</title>
+    <title>Cosmos Vote</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,7 +23,7 @@
     <div class="Site-content">
         <div style="text-align: center;">
             <div class="clearfix content-heading">
-                <h1 class="title is-2" style="display: inline;">Cosmos Votes</h1>
+                <h1 class="title is-2" style="display: inline;">Cosmos Vote</h1>
             </div>
             <div>
                 <a target="_blank" href="https://twitter.com/ericet369"><i class="fa fa-twitter fa-2x"
