--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <style>
@@ -53,6 +53,10 @@
                     </div>
                 </div>
             </div>
+            <div class="form-check form-switch" >
+                <input class="form-check-input" type="checkbox" id="isMultipleAccounts" name="isMultipleAccounts" value="yes">
+                <label class="form-check-label" for="isMultipleAccounts">One Mnemonic with multiple accounts?</label>
+            </div>
 
             <form id="vote" class="field has-addons has-addons-centered">
 
@@ -77,12 +81,14 @@
                         <option value="2">Abstain</option>
                     </select>
                 </div>
+                <br/>
                 <div class="row justify-content-center">
                     <div class="col-md-3">
                         <button class="btn btn-primary btn-block" type="submit">Auto Vote</button>
                     </div>
                 </div>
             </form>
+            <br/>
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
