--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
             <form id="vote" class="field has-addons has-addons-centered">
 
                 <h4>Chain</h4>
-                <div class="form-group">
-                    <select name="chainId" id="chainId" autocomplete="off" class="form-control">
-                        <option value="all">All Available Chains</option>
-                        <option value="cosmoshub-4">Cosmos</option>
-                        <option value="osmosis-1">Osmosis</option>
-                        <option value="juno-1">Juno</option>
-                        <option value="akashnet-2">Akash</option>
-                        <option value="stargaze-1">Stargaze</option>
-                        <option value="chihuahua-1">Chihuahua</option>
-                    </select>
+                <div id=chainsList class="form-group">
                 </div>
                 <h4>Vote Option</h4>
                 <div class="form-group">
