--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                     </select>
                 </div>
                 <br/>
+                <div class="form-check form-switch" >
+                    <input class="form-check-input" type="checkbox" id="mode" name="mode" value="1">
+                    <label class="form-check-label" for="mode">Gas Saving?</label>
+                </div>
+                <br/>
                 <div class="row justify-content-center">
                     <div class="col-md-3">
                         <button class="btn btn-primary btn-block" type="submit">Auto Vote</button>
