added terra and customize max accounts

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                     </div>
                 </div>
             </div>
-            <div class="form-check form-switch" >
+            <br/>
+            <div class="col-auto form-check form-switch" >
                 <input class="form-check-input" type="checkbox" id="isMultipleAccounts" name="isMultipleAccounts" value="yes">
                 <label class="form-check-label" for="isMultipleAccounts">One Mnemonic with multiple accounts?</label>
+                <input type="number" class="input-group-append" id="maxNum" placeholder="50" value=50 disabled>
             </div>
 
             <form id="vote" class="field has-addons has-addons-centered">
@@ -93,6 +95,8 @@
                     </div>
                 </div>
             </div>
+            <br/>
+            <br/>
         </div>
     </div>
 
